@@ -395,6 +395,7 @@
 			"LOOKUP_TYPE_NOTFOUND": "مراجعه نوع {0} حاصلی نداشت",
 			"MENU_NOTFOUND": "منو پیدا نشد",
 			"NOTFOUND": "آیتم پیدا نشد",
+			"NOTFOUND_FUNCTION": "<em>Function not found {0}</em>",
 			"ORM_ACTIVE_ATTRIBUTE": "<em>Attribute \"{1}\" for class/process \"{0}\" is active</em>",
 			"ORM_AMBIGUOUS_DIRECTION": "نمیشود جهت رابطه بطور اتوماتیک پیدا شود.",
 			"ORM_CANT_CREATE_DATABASE": "دیتابیس ایجاد نمیشود",
